--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "method-override": "2.3.x",
     "morgan": "1.6.x",
     "request": "^2.81.0",
+    "semantic-ui": "^2.2.10",
     "ui-router": "^1.0.0-alpha.3"
   },
   "repository": {},
