--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-multiparty": "2.0.x",
     "ejs": "2.4.x",
     "errorhandler": "1.4.x",
+    "exif": "^0.6.0",
     "express": "4.13.x",
     "jquery": "^3.2.1",
     "method-override": "2.3.x",
