--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "4.13.x",
     "form-data": "^2.1.4",
     "jquery": "^3.2.1",
+    "mapbox-gl": "^0.37.0",
     "method-override": "2.3.x",
     "mime": "^1.3.6",
     "morgan": "1.6.x",
